--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <html>
  <head>
-   <h1>Horror and Romance</h1>
+   <link rel="stylesheet" href="style.css"/>
  </head>
-
+ <body>
+<h1>Horror and Romance</h1>
 
 
 <a href='about.html'>this is a link</a>
+</body>
+</html>
