added style sheet

--- a/about.html
+++ b/about.html
@@ -1,14 +1,14 @@
 <html>
   <head>
+
+    <link rel="stylesheet" href="style.css"/>
+  </head>
+  <body>
     <h1>TWO Face</h1>
     h1{
     color:Black;
     }
     <h2><b>Dark vs <b>Light</h2>
-    
-    
-  </head>
-  <body>
-  
+
   </body>
   </html>
