--- a/about.html
+++ b/about.html
@@ -4,8 +4,8 @@
     <link rel="stylesheet" href="style.css"/>
   </head>
   <body>
-    
-    <h1>TWO Face</h1>
+
+    <h1>2WO FACED</h1>
 
     <h2><b>Dark vs <b>Light</h2>
 
