--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <html>
  <head>
    <link rel="stylesheet" href="style.css"/>
- </head>
- <body>
-<h1>Horror and Romance</h1>
+</head>
+
+<body>
+
+<h1><strong>2WO FACED.COM</strong></h1>
+<h2 id='horrorTitle'>Horror</h2>
+<h2 id='romanceTitle'>Romance</h2>
 
 
-<a href='about.html'>this is a link</a>
 </body>
+
+
 </html>
