--- a/index.html
+++ b/index.html
@@ -1,16 +1,38 @@
 <html>
  <head>
+
    <link rel="stylesheet" href="style.css"/>
+
+   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Cabin+Sketch" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css?family=Rufina" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css?family=Special+Elite" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css?family=Tinos" rel="stylesheet">
+
+
 </head>
 
 <body>
 
-<h1><strong>2WO FACED.COM</strong></h1>
-<h2 id='horrorTitle'>Horror</h2>
-<h2 id='romanceTitle'>Romance</h2>
+
+    <h1 class="Title"><strong>2WO FACED</strong></h1>
 
 
-</body>
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <h2 id='horrorTitle'>Horror</h2>
+
+          <a href="fear.html" id='Quote'>Monsters and Zombies</a>
+
+        </div>
+        <div class="col">
+          <h2 id='romanceTitle'>Romance</h2>
+        </div>
 
 
+
+
+
+  </body>
 </html>
