--- a/about.html
+++ b/about.html
@@ -7,7 +7,8 @@
 <body>
 
   <h1>TWO FACED</h1>
-  <h2>insert text here</h2>
+  <h2>What is 2WO FACED.COM?</h2>
+  <p>2WO FACED.COM contains a mixture of alternatives divided into 2 Categories. </p>
 
 
 
