Added more info to Paragraph

--- a/about.html
+++ b/about.html
@@ -8,7 +8,8 @@
 
   <h1>TWO FACED</h1>
   <h2>What is 2WO FACED.COM?</h2>
-  <p>2WO FACED.COM contains a mixture of alternatives divided into 2 Categories. </p>
+  <p>2WO FACED.COM contains a mixture of alternatives divided into 2 Categories.
+  Providing you with many options to look over. </p>
 
 
 
