Tidying up formatting

--- a/fear.html
+++ b/fear.html
@@ -5,8 +5,10 @@
 </head>
 
 <body>
-  <h1 class="fearTitle">Monsters and Zombies</strong></h1>
-  <p class="explanation"
+  <h1 class="fearTitle">Monsters and Zombies</h1>
+
+  <p class="explanation">The power of Evil</p> 
+
 
 
 </body>
