--- a/about.html
+++ b/about.html
@@ -8,7 +8,10 @@
 
   <h1>ABOUT</h1>
   <h2>What is 2WO FACED.COM?</h2>
-  <p>2WO FACED.COM contains a mixture of alternatives divided into 2 Categories. We've provided you with many options to select.</p>
+
+<div>
+  2WO FACED.COM contains a mixture of alternatives divided into 2 Categories. We've provided you with many options to select.
+</div>
 
 
 
