--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="col">
           <h2 id='horrorTitle'>Horror</h2>
 
-          <a href='about.html'>ABOUT</a>
+          <a href='romance.html'>LOVE</a>
 
           <a href="fear.html" id='Quote'>Monsters and Zombies</a>
        </div>
@@ -24,5 +24,7 @@
          <div class="col">
         <h2 id='romanceTitle'>Romance</h2>
       </div>
+
+
   </body>
 </html>
