--- a/Romance.html
+++ b/Romance.html
@@ -1,12 +1,20 @@
 <html>
-<head>
-      <link rel="stylesheet" href="romanceStyles.css"/>
+  <head>
 
-</head>
+     <link rel="stylesheet" href="romanceStyles.css"/> 
+
+  </head>
+
 <body>
 
-  <h1>Romance</h1>
+  <h1>Love</h1>
+  <h2>What does love really mean?</h2>
 
-  <div>
-  <img src="Images/SKY.gif"/>
-  </div>
+<div>
+  2WO FACED.COM contains a mixture of alternatives divided into 2 Categories. We've provided you with many options to select.
+</div>
+
+
+
+</body>
+</html>
