--- a/Romance.html
+++ b/Romance.html
@@ -1,17 +1,18 @@
 <html>
   <head>
 
-     <link rel="stylesheet" href="romanceStyles.css"/> 
+     <link rel="stylesheet" href="romanceStyles.css"/>
 
   </head>
 
 <body>
 
   <h1>Love</h1>
-  <h2>What does love really mean?</h2>
+  <h2>INSERT HEADING</h2>
 
 <div>
-  2WO FACED.COM contains a mixture of alternatives divided into 2 Categories. We've provided you with many options to select.
+  (INSERT DESCRIPTION
+   INSERT DESCRIPTION)
 </div>
 
 
