--- a/index.html
+++ b/index.html
@@ -1,30 +1,30 @@
 <html>
  <head>
 
-   <link rel="stylesheet" href="indexStyle.css"/>
+
    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
    <link href="https://fonts.googleapis.com/css?family=Cabin+Sketch" rel="stylesheet">
    <link href="https://fonts.googleapis.com/css?family=Rufina" rel="stylesheet">
    <link href="https://fonts.googleapis.com/css?family=Special+Elite" rel="stylesheet">
    <link href="https://fonts.googleapis.com/css?family=Tinos" rel="stylesheet">
+    <link rel="stylesheet" href="indexStyle.css"/>
 
 </head>
 <body>
     <h1 class="Title"><strong>2WO FACED</strong></h1>
+
     <div class="container">
       <div class="row">
         <div class="col">
           <h2 id='horrorTitle'>Horror</h2>
+          <a href="fear.html" id='horrorquote'>Monsters and Zombies</a>
+        </div>
 
-          <a href='romance.html'>LOVE</a>
-
-          <a href="fear.html" id='Quote'>Monsters and Zombies</a>
-       </div>
-
-         <div class="col">
-        <h2 id='romanceTitle'>Romance</h2>
+        <div class="col">
+          <h2 id='romanceTitle'>Romance</h2>
+          <a href='romance.html' id='lovequote'>LOVE</a>
+        </div>
       </div>
-
-
+    </div>
   </body>
 </html>
