--- a/fear.html
+++ b/fear.html
@@ -7,8 +7,20 @@
 <body>
   <h1 class="fearTitle">Monsters and Zombies</h1>
 
-  <p class="explanation">The power of Evil</p> 
+<div class="container">
+  <div class="row">
+    <div class="col">
+    </div>
+   <div class="col">
+      <p id="explanation">If you are, you've come to the right place heheh!!
+    <br> Monsters and zombies are very scary creatures dont you think... who knows, one of use in this room could be infected by this terror disease and walking around these thick walls of code.
+    If you are reading this my name is Rangimarie and i chose the idea of horror because i find evilness intersting. You will too hehe TRUST ME! I want you to choose me or else i will haunt you and take a bit out of you when you least expect it.
+      </br>
 
+      </p>
+   </div>
+ </div>
+</div>
 
 
 </body>
