--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
       <div class="row">
         <div class="col">
           <h2 id='horrorTitle'>Horror</h2>
-          <a href="fear.html" id='horrorquote'>Monsters and Zombies</a>
+          <a href="fear.html" id='horrorquote'>EVIL</a>
         </div>
 
         <div class="col">
           <h2 id='romanceTitle'>Romance</h2>
-          <a href='romance.html' id='lovequote'>LOVE</a>
+          <a href='romance.html' id='lovequote'>Love</a>
         </div>
       </div>
     </div>
