--- a/Romance.html
+++ b/Romance.html
@@ -1,19 +1,33 @@
 <html>
   <head>
 
+
      <link rel="stylesheet" href="romanceStyles.css"/>
 
   </head>
 
 <body>
 
-  <h1>Love</h1>
-  <h2>INSERT HEADING</h2>
+  <ul>
+  <li><a href="index.html">Home</a></li>
+  <li><a href="romance.html">Stories</a></li>
+  
 
-<div>
-  (INSERT DESCRIPTION
-   INSERT DESCRIPTION)
-</div>
+</ul>
+
+  <div style="padding:10px;margin-top:30px;background-color:#1abc9c;height:1400px;">
+  <h1>Love</h1>
+  <h2>STORIES</h2>
+
+  <p>Word's I'll Never say- By Hiddlesness</P>
+  <p> #breakup #broken #emotions #feelings
+  <p>July 4th 2016, 23:30 </p>
+
+  <p>  I know what my problem is. I get attached, fast. And once I'm attached to someone, I do everything I can to please them. It's never been about what I want, it's always everyone's needs before my own. I give out too many chances to people who, quite frankly, do not deserve them. They take advantage of me, and I become a pushover, But I'm okay with that, because they're in my life and that's all I ever wanted. And even if they screw me over, I'll still be there for them. Because that's me, that's who I am. Once I get attached to someone, they capture my heart and the yalways have a place there. And that's why it's so hard for me to let them go.
+
+    ~Zeina~       >>(TO BE CONTINUED) </p>
+
+
 
 
 
