--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <div class="col">
           <h2 id='romanceTitle'>Romance</h2>
-          <a href='romance.html' id='lovequote'>Love</a>
+          <a href='Romance.html' id='lovequote'>Love</a>
         </div>
       </div>
     </div>
