--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="row">
         <div class="col">
           <h2 id='horrorTitle'>Horror</h2>
-          <a href="fear.html" id='horrorquote'>EVIL</a>
+          <a href="fear.html" id='horrorquote'>Evil</a>
         </div>
 
         <div class="col">
